package message;
option optimize_for = LITE_RUNTIME;
option java_outer_classname = "Register";

// 用户注册请求
message RegisterRequest{

    required string userName = 1;//用户名
    optional int32 chID=2;//渠道ID

}

// 用户注册响应
message RegisterResponse{

    required RegisterStatus status = 1;//注册状态
    optional string uid = 2;//用户的id
    optional string userName = 3;//用户名
    
    enum RegisterStatus{
   
			RegisterStatus_OK	= 1;	     //注册成功
			RegisterStatus_FAIL 	= 0;//注册失败

		}

}