package message ;
option optimize_for = LITE_RUNTIME;
option java_outer_classname = "StartBattle";
// 通知客户端开始战斗63007
message NotifyStartBattle
{	
    required NotifyType type = 1;//通知类型
     enum NotifyType{
	   START	= 1;//开始
    }
}